--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": "~7.0",
     "symfony/dependency-injection": "~3.0",
     "symfony/config": "~3.0",
     "symfony/yaml": "~3.0",
     "doctrine/common": "~2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.3"
   },
   "autoload": {
     "psr-4": {
