--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
   "require-dev": {
     "phpunit/phpunit": "^6.3"
   },
+  "config": {
+    "bin-dir": "bin/"
+  },
   "autoload": {
     "psr-4": {
       "Framework\\": "src/"
